# my-scikit-tools

./: .gitignore  README.md  setup.cfg
my_sklearn_tools/: __init__.py  cpm.py  model_selection.py  pca_regressors.py  preprocessing.py  stacking.py  transmodal.py
my_sklearn_tools/tests/: principal_components_regression.ipynb  test_cpm.py  test_pcr.py  test_transmodal.py
my_sklearn_tools/tests/.ipynb_checkpoints/: principal_components_regression-checkpoint.ipynb
