[metadata]
name = my_sklearn_tools
author = Javier Rasero
author_email = jrasero.daparte@gmail.com
version = 0.0.0
description = A package with several scikit-learn tools that I often use
url = https://github.com/jrasero/my-scikit-tools

[options]
packages = find:
install_requires =
sklearn >=0.23 


